--- a/LaTex/saturation_runoff_main.tex
+++ b/LaTex/saturation_runoff_main.tex
@@ -24,7 +24,7 @@
 \begin{@twocolumnfalse}
 \maketitle
 \begin{abstract}
-In this paper a simple bucket model has been used to model the surface energy balance and the water balance with different soil depths over a two-year period. Water level, saturation, surface runoff and energy fluxes is analysed for bucket depths of 0.1, 0.5 and 0.9 meters.  With a freezing condition prohibiting the soil water level to rise during periods of temperatures below zero, the deepest bucket almost went through the entire period without reaching saturation. The other buckets saturated quickly resulting in both surface- and subsurface runoff relatively fast after rainfall events. The soil temperature variations was greatest for the shallowest bucket, causing this bucket to experience largest fluctuations in latent heat, sensible heat, conduction and longwave radiation. 
+In this paper a simple bucket model has been used to model the surface energy balance and the water balance with different soil depths over a two-year period. Water level, saturation, surface runoff and energy fluxes is analysed for bucket depths of 0.1, 0.5 and 0.9 meters.  With a freezing condition prohibiting the soil water level to rise during periods of temperatures below zero, the deepest bucket almost went through the entire period without reaching saturation. The other buckets saturated quickly resulting in surface runoff relatively fast after rainfall events. The soil temperature variations was greatest for the shallowest bucket, causing this bucket to experience largest fluctuations in latent heat, sensible heat, conduction and longwave radiation. 
 \end{abstract}
 
 All material used in this project may be found on 
@@ -224,7 +224,7 @@ Moving over to the water balance Figure(\ref{fig:bucket_fixed}) shows how the wa
 	\label{fig:bucket_fixed}
 \end{figure}
 
-Since all of the buckets eventually reaches saturation, surface runoff will occur as shown in Figure (\ref{fig:runoff}). The runoff values are relatively high compared to the precipitation values, apparently being close to the full size of the precipitation event. Each of the buckets experiences runoff where one deeper bucket also experiences runoff. Towards the end of the plot in Figure (\ref{fig:runoff}) it may look like only the deepest bucket experiences runoff, but since the deepest bucket experiences runoff at this point in time, all of the other buckets also experiences runoff here.  
+Since all of the buckets eventually reaches saturation, surface runoff will occur as shown in Figure (\ref{fig:runoff}). The runoff values are relatively high compared to the precipitation values, apparently being close to the full size of the precipitation event. Each of the buckets experiences runoff where one deeper bucket also experiences runoff. Towards the end of the plot in Figure (\ref{fig:runoff}) it may look like only the deepest bucket experiences runoff, but since the deepest bucket experiences runoff at this point in time, all of the other buckets also experiences runoff here.
 
 \begin{figure}[h]
 	\centering 
